reverted auto-div-text-wrap, fixed formatting bugs for nested divs instead text editors

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -207,7 +207,7 @@ img {
     display: block;
   }
 
-  > div {
+  div {
     margin: 12.5px 0;
   }
 }
@@ -225,7 +225,7 @@ img {
     letter-spacing: 0.02em;
   }
 
-  > div {
+  div {
     margin: 12.5px 0;
   }
 
